--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.page {
+  border: 1px solid red;
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
+  padding: 30px 10px;
+  font-family: "Roboto", sans-serif;
 }
