--- a/src/Header.css
+++ b/src/Header.css
@@ -1,13 +1,13 @@
 .header {
-  border: 1px solid red;
+  padding: 30px 0;
+  align-self: flex-start;
 }
 
 .header__title {
-  border: 1px solid red;
   font-weight: 300;
+  font-size: 40px;
   color: #1adaca;
   text-align: center;
   text-transform: uppercase;
-
   margin: 0;
 }
