--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
+html, body {
+  height: 100%;
+}
+
 .page {
-  border: 1px solid red;
   max-width: 1280px;
   min-width: 320px;
   margin: 0 auto;
-  padding: 30px 10px;
+  padding: 0 10px;
   font-family: "Roboto", sans-serif;
-  background-color: #000;
+  background-color: #121212;
+}
+
+.root {
+  display: grid;
+  grid-template-rows: min-content;
+  height: 100%;
 }
