--- a/src/ToDoForm.css
+++ b/src/ToDoForm.css
@@ -9,7 +9,7 @@
   width: 100%;
   background-color: transparent;
   font-size: 16px;
-  color: #ffff52;
+  color: #f0f0f0;
   padding: 0 10px;
   border: none;
 }
@@ -28,7 +28,7 @@
 
   font-family: "Roboto", sans-serif;
   font-size: 18px;
-  color: #008800;
+  color: #f0f0f0;
   text-transform: uppercase;
 }
 
