--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,18 @@
+html, body {
+  height: 100%;
+}
 
+.page {
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
+  padding: 0 10px;
+  font-family: "Roboto", sans-serif;
+  background-color: #121212;
+}
+
+.root {
+  display: grid;
+  grid-template-rows: min-content;
+  height: 100%;
+}
